# datafusion-labelcraft-rubert-baseline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  metadata.json  pyproject.toml  requirements.txt  run.py
data/dataset_v1/: README.md  transform.py  view.ipynb
notebooks/: Experiment.ipynb  NonLeafEDA.ipynb
src/category_tree/: category_tree.py
src/metrics/: hierarchical_accuracy.py  transformers_metrics.py
